--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-This is my class homepage
+<!DOCTYPE html>
+<html>
+<title>LA 458</title>
+<body>
+
+<h1>Tressa Hobbs</h1>
+<p>This is my class homepage.</p>
+
+</body>
+</html>
