--- a/exercise2/index.html
+++ b/exercise2/index.html
@@ -14,6 +14,6 @@
 <h1><em>Cork, Ireland</em></h1>
 <p>This page contains two images and a map of Cork, Irealnd. I am interested in this place because I studied abroad in this city for a semester last spring.</p>
 <p><img
-  src="" alt="Cork City Center">
+  src="Cork city.jpg" alt="Cork City Center">
 </body>
 </html>
