--- a/exercise1/index.html
+++ b/exercise1/index.html
@@ -88,7 +88,7 @@ body {
 
 <h1>About Me</h1>
 <p>Hi class!</p>
-	<p>My name is <em>Tressa Hobbs</em>. I am a senior in Anthropology and International Studies with two minors in Classical Studies and Geographic Information Systems. I am on campus this semester. I don’t have any experience with coding or with HTML or JavaScript but I am excited to learn. I have a decent amount of experience in GIS and I am also currently in CRP 351 and DSN_S 546. I’ve used GIS to map locations of artifacts and features discovered while working on an archaeological site and I will be using the Collector App and web mapping skill this summer to document hiking trails in Iceland. I will be using this data to help create a field guide and anthology as well as an online trail guide for it. I am hoping to learn a lot about coding in this class and to add to my current GIS skill set. </p>
+	<p>My name is <b>Tressa Hobbs</b>. I am a senior in Anthropology and International Studies with two minors in Classical Studies and Geographic Information Systems. I am on campus this semester. I don’t have any experience with coding or with HTML or JavaScript but I am excited to learn. I have a decent amount of experience in GIS and I am also currently in CRP 351 and DSN_S 546. I’ve used GIS to map locations of artifacts and features discovered while working on an archaeological site and I will be using the Collector App and web mapping skill this summer to document hiking trails in Iceland. I will be using this data to help create a field guide and anthology as well as an online trail guide for it. I am hoping to learn a lot about coding in this class and to add to my current GIS skill set. </p>
 
 </body>
 </html>
