--- a/exercise1/index.html
+++ b/exercise1/index.html
@@ -79,7 +79,7 @@ body {
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="https://tressahobbs.github.io/LA458/exercise2">Exercsie 2</a>
+      <a href="https://tressahobbs.github.io/LA458/exercise2">Exercise 2</a>
       <a href="https://github.com/tressahobbs/LA458/blob/master/exercise3/dams.geojson">Exercise 3</a>
       <a href="https://tressahobbs.github.io/LA458/exercise4/#7/41.963/-93.369">Exercise 4</a>
     </div>
