--- a/exercise1/index.html
+++ b/exercise1/index.html
@@ -80,8 +80,8 @@ body {
     </button>
     <div class="dropdown-content">
       <a href="../exercise2/index.html">Exercise 2</a>
-      <a href="https://github.com/tressahobbs/LA458/blob/master/exercise3/dams.geojson">Exercise 3</a>
-      <a href="https://tressahobbs.github.io/LA458/exercise4/#7/41.963/-93.369">Exercise 4</a>
+      <a href="../exercise3/dams.geojson">Exercise 3</a>
+      <a href="../exercise4/index.html">Exercise 4</a>
     </div>
   </div> 
 </div>
