--- a/exercise2/index.html
+++ b/exercise2/index.html
@@ -80,13 +80,12 @@ body {
 
 <body>
 <div class="navbar">
-  <a href="#home">Home</a>
+  <a href="../exercise1/index.html">Home</a>
   <div class="dropdown">
     <button class="dropbtn">Dropdown 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="../exercise1/index.html">Back to Home</a>
       <a href="../exercise3/dams.geojson">Exercise 3</a>
       <a href="../exercise4/index.html">Exercise 4</a>
     </div>
