--- a/exercise2/index.html
+++ b/exercise2/index.html
@@ -86,7 +86,7 @@ body {
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="../exercise3/dams.geojson">Exercise 3</a>
+      <a href="https://github.com/tressahobbs/LA458/blob/master/exercise3/dams.geojson">Exercise 3</a>
       <a href="../exercise4/index.html">Exercise 4</a>
     </div>
   </div> 
