--- a/index.html
+++ b/index.html
@@ -1,10 +1,136 @@
 <!DOCTYPE html>
 <html>
-<title>LA 458</title>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: red;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+</style>
+</head>
+<title>exercise 1</title>
 <body>
 
-<h1>Tressa Hobbs</h1>
-<p>This is my class homepage.</p>
+<div class="navbar">
+  <a href="#home">Home</a>
+  <div class="dropdown">
+    <button class="dropbtn">Dropdown 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="../exercise2/index.html">Exercise 2</a>
+      <a href="https://github.com/tressahobbs/LA458/blob/master/exercise3/dams.geojson">Exercise 3</a>
+      <a href="../exercise4/index.html">Exercise 4</a>
+    </div>
+  </div> 
+</div>
 
+<h1>Tressa Hobbs</h1>
+<p>Hi everyone!</p>
+  <p>This is my class homepage</p>
+    
 </body>
+    <head>
+  <title>Multiplication Table</title>
+  <script type="text/javascript">
+    var rows = prompt("How many rows for your multiplication table?");
+    var cols = prompt("How many columns for your multiplication table?");
+    if(rows == "" || rows == null)
+   		 rows = 10;
+    if(cols== "" || cols== null)
+   		 cols = 10;
+    createTable(rows, cols);
+    function createTable(rows, cols)
+    {
+      var j=1;
+      var output = "<table border='1' width='500' cellspacing='0'cellpadding='5'>";
+        var newArray = ["this array has been logged"];
+        console.log(newArray);
+      for(i=1;i<=rows;i++)
+      {
+    	output = output + "<tr>";
+        while(j<=cols)
+        {
+  		  output = output + "<td>" + i*j + "</td>";
+   		  j = j+1;
+   		}
+   		 output = output + "</tr>";
+   		 j = 1;
+          console.log("started next loop"+i);
+    }
+    output = output + "</table>" + "<input type=\"button\" value=\"Click me\" onclick=\"makearray()\">" + " <input type=\"button\" value=\"No, click me!\" onclick=\"msg()\">";
+        document.write(output);
+    }
+      
+      function msg() {
+          alert("Thanks for checking out my page! :)");
+      }
+      function makearray(){var size = prompt("Enter the size of the array");
+          var tom = [];
+          for(var i = 0; i < size; i++) {tom.push(''+i);}
+          console.log(tom);
+      }
+  </script>
+</head>
 </html>
