--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ body {
 
 <h1>Tressa Hobbs</h1>
 <p>Hi everyone!</p>
-  <p>This is my class homepage</p>
+  <p>This is my class homepage.</p>
     
 </body>
 </html>
