--- a/exercise2/index.html
+++ b/exercise2/index.html
@@ -80,14 +80,16 @@ body {
 
 <body>
 <div class="navbar">
-  <a href="../exercise1/index.html">Home</a>
+  <a href="../index.html">Home</a>
   <div class="dropdown">
     <button class="dropbtn">Dropdown 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
+        <a href="../exercise1/index.html">Exercise 1</a>
       <a href="https://github.com/tressahobbs/LA458/blob/master/exercise3/dams.geojson">Exercise 3</a>
       <a href="../exercise4/index.html">Exercise 4</a>
+        <a href="../assignment1/index.html">Assignment 1</a>
     </div>
   </div> 
 </div>
