--- a/exercise1/index.html
+++ b/exercise1/index.html
@@ -73,7 +73,7 @@ body {
 <body>
 
 <div class="navbar">
-  <a href="#home">Home</a>
+  <a href="../index.html">Home</a>
   <div class="dropdown">
     <button class="dropbtn">Dropdown 
       <i class="fa fa-caret-down"></i>
@@ -82,6 +82,7 @@ body {
       <a href="../exercise2/index.html">Exercise 2</a>
       <a href="https://github.com/tressahobbs/LA458/blob/master/exercise3/dams.geojson">Exercise 3</a>
       <a href="../exercise4/index.html">Exercise 4</a>
+        <a href="../assignment1/index.html">Assignment 1</a>
     </div>
   </div> 
 </div>
