--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -79,6 +79,7 @@ body {
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
+        <a href="../exercise1/index.html">Exercise 1</a>
       <a href="../exercise2/index.html">Exercise 2</a>
       <a href="https://github.com/tressahobbs/LA458/blob/master/exercise3/dams.geojson">Exercise 3</a>
       <a href="../exercise4/index.html">Exercise 4</a>
