--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ body {
 <body>
 
 <div class="navbar">
-  <a href="#home">Home</a>
+  <a href="index.html">Home</a>
   <div class="dropdown">
     <button class="dropbtn">Dropdown 
       <i class="fa fa-caret-down"></i>
