--- a/exercise4/index.html
+++ b/exercise4/index.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
@@ -10,60 +8,35 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="stylesheet" href="css/leaflet.css"><link rel="stylesheet" href="css/L.Control.Locate.min.css">
         <link rel="stylesheet" href="css/qgis2web.css"><link rel="stylesheet" href="css/fontawesome-all.min.css">
-    <style>
+   <style>
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, sans-serif;
 }
-
 .navbar {
-  overflow: hidden;
   background-color: #333;
+    overflow: hidden;
 }
-
 .navbar a {
   float: left;
   font-size: 16px;
   color: white;
   text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
 }
-
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
 .dropdown .dropbtn {
   font-size: 16px;  
-  border: none;
-  outline: none;
   color: white;
-  padding: 14px 16px;
   background-color: inherit;
-  font-family: inherit;
-  margin: 0;
 }
-
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
-}
-
 .dropdown-content {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  min-width: 140px;
 }
 
 .dropdown-content a {
   float: none;
   color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
   text-align: left;
 }
 
@@ -75,15 +48,6 @@ body {
   display: block;
 }
 </style>
-
-        <style>
-        html, body, #map {
-            width: 100%;
-            height: 100%;
-            padding: 0;
-            margin: 0;
-        }
-        </style>
         <title></title>
     </head>
     <body>
