--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ body {
       <a href="https://github.com/tressahobbs/LA458/blob/master/exercise3/dams.geojson">Exercise 3</a>
       <a href="exercise4/index.html">Exercise 4</a>
         <a href="assignment1/index.html">Assignment 1</a>
+        <a href="exercise5/index.html">Exercise 5</a>
     </div>
   </div> 
 </div>
