Added navigation bar

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ body {
       <a href="exercise4/index.html">Exercise 4</a>
         <a href="assignment1/index.html">Assignment 1</a>
         <a href="exercise5/index.html">Exercise 5</a>
+        <a href="exercise6/index.html">Exercise 6</a>
     </div>
   </div> 
 </div>
