--- a/exercise6/index.html
+++ b/exercise6/index.html
@@ -1,1 +1,147 @@
+<!DOCTYPE html>
+<html>
+    <head>
+      <meta name="description" content="LA/CRP 458/558 Leaflet starter file -     2020">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Exercise 6 - Leaflet Vector Layers</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
+<script src = "https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+integrity = "sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+crossorigin = "" >
+        </script>
+<style>
+body {
+    font-family: Arial, sans-serif;
+}
+
+.navbar {
+    background-color: #333;
+    overflow: hidden;
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+
+}
+
+.navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+}
+
+.dropdown .dropbtn {
+    font-size: 16px;
+    color: white;
+    background-color: inherit;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 140px;
+}
+
+.dropdown-content a {
+    float: none;
+    color: black;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+#map {
+    height: 400px;
+    width: 600px;
+}
+</style>
+       
+</head>
+<body>
+ <div id="map" style="width: 600px; height: 400px; position: relative; outline: none;"></div>
+        
+   <div class="navbar">
+     <a href="../index.html">Home</a>
+     <div class="dropdown">
+         <button class="dropbtn">Dropdown
+             <i class="fa fa-caret-down"></i>
+         </button>
+         <div class="dropdown-content">
+             <a href="../exercise1/index.html">Exercise 1</a>
+             <a href="../exercise2/index.html">Exercise 2</a>
+             <a href="https://github.com/tressahobbs/LA458/blob/master/exercise3/dams.geojson">Exercise 3</a>
+             <a href="../exercise4/index.html">Exercise 4</a>
+             <a href="../assignment1/index.html">Assignment 1</a>
+             <a href="../exercise5/index.html">Exercise 5</a>
+         </div>
+     </div>
+ </div>
+
+<script>
+var map = L.map('map').setView([51.897222, -8.47], 13);
+
+// add OpenStreet tile layer
+L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
+    attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+    maxZoom: 18,
+    id: 'mapbox/streets-v11',
+
+    accessToken: 'pk.eyJ1IjoidGhvYmJzMTM4MCIsImEiOiJjazcweG4yNTAwMTk0M2xzZGVjMWZhOTM4In0.dozxRBRJVB_M2s5SwRWYlw'
+}).addTo(map);
+
+// marker
+var marker = L.marker([51.893, -8.493]).addTo(map).bindPopup("<b>Hi everyone!</b><br />I am University College Cork.").openPopup().addTo(map);
+
+// circle  
+var circle = L.circle([51.889656, -8.493126], 35, {
+    color: 'red',
+    fillColor: '#f03',
+    fillOpacity: 0.5
+}).addTo(map).bindPopup("I'm the apartment Tressa lived in while in Cork.").addTo(map);
+
+//polygon
+var polygon = L.polygon([
+    [51.9003, -8.4726],
+    [51.898, -8.474],
+    [51.8981, -8.481],
+    [51.9009, -8.4796]
+]).addTo(map).bindPopup("I'm Cork City Center");
+
+// circle marker
+var circlemarker = L.circleMarker([51.8944, -8.4806], {
+    radius: 10,
+    stroke: true,
+    color: 'orange',
+    opacity: 1,
+    weight: 1,
+    fill: true,
+    fillColor: "orange",
+    fillOpacity: 0.5
+}).addTo(map);
+
+//polyline
+var latlng = [
+    [51.889656, -8.493126],
+    [51.890163, -8.493323],
+    [51.890956, -8.487913],
+    [51.892046, -8.484383],
+    [51.892263, -8.483498]
+];
+
+var polyline = L.polyline(latlng, {
+    color: 'blue'
+}).addTo(map);   
+        </script>    
+    </body>
+</html>
 
