--- a/exercise7/index.html
+++ b/exercise7/index.html
@@ -4,9 +4,84 @@
     <script>
     </script>
     <style>
+        body {
+    font-family: Arial, sans-serif;
+}
+
+.navbar {
+    background-color: #333;
+    overflow: hidden;
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+
+}
+
+.navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+}
+
+.dropdown {
+    font-size: 16px;
+    background-color: inherit;
+    float: left;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 140px;
+}
+
+    .dropdown .dropbtn {
+        font-size: 16px;
+        border: none;
+        outline: none;
+        color: white;
+        padding: 14px 16px
+    }
+    
+    
+.dropdown-content a {
+    float: none;
+    color: black;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
     </style>
   </head>
   <body>
+       <div class="navbar">
+     <a href="../index.html">Home</a>
+     <div class="dropdown">
+         <button class="dropbtn">Dropdown
+             <i class="fa fa-caret-down"></i>
+         </button>
+         <div class="dropdown-content">
+             <a href="../exercise1/index.html">Exercise 1</a>
+             <a href="../exercise2/index.html">Exercise 2</a>
+             <a href="https://github.com/tressahobbs/LA458/blob/master/exercise3/dams.geojson">Exercise 3</a>
+             <a href="../exercise4/index.html">Exercise 4</a>
+             <a href="../assignment1/index.html">Assignment 1</a>
+             <a href="../exercise5/index.html">Exercise 5</a>
+             <a href="../exercise6/index.html">Exercise 6</a>
+         </div>
+     </div>
+ </div>
     <script>
     </script>
   </body>
