updated nav bar

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@ body {
         <a href="assignment1/index.html">Assignment 1</a>
         <a href="exercise5/index.html">Exercise 5</a>
         <a href="exercise6/index.html">Exercise 6</a>
+        <a href="exercise7/index.html">Exercise 7</a>
+			 <a href="exercise8/index.html">Exercise 8</a>
+			 <a href="exercise9/index.html">Exercise 9</a>
     </div>
   </div> 
 </div>
