--- a/exercise10/index.html
+++ b/exercise10/index.html
@@ -116,14 +116,14 @@ L.geoJson(states).addTo(map);
 
 	// get color
 	function getColor(d) {
-    return d > 1000 ? '#800026' :
-           d > 500  ? '#BD0026' :
-           d > 200  ? '#E31A1C' :
-           d > 100  ? '#FC4E2A' :
-           d > 50   ? '#FD8D3C' :
-           d > 20   ? '#FEB24C' :
-           d > 10   ? '#FED976' :
-                      '#FFEDA0';
+    return d > 800 ? '#7a0177' :
+           d > 400  ? '#ae017e' :
+           d > 200  ? '#dd3497' :
+           d > 100  ? '#f768a1' :
+           d > 50   ? '#fa9fb5' :
+           d > 25   ? '#fcc5c0' :
+           d > 10   ? '#fde0dd' :
+                      '#fff7f3';
 }
 
 
