--- a/exercise10/index.html
+++ b/exercise10/index.html
@@ -128,11 +128,12 @@
 
 
 <script>
-
+ //basemap
 var stamenURL = 'http://stamen-tiles-{s}.a.ssl.fastly.net/toner/{z}/{x}/{y}.{ext}';
 var stamenAttrib = 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> &mdash; Map data &copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>';
        
 
+    //map variable
 var map = L.map('map').setView([37.8, -96], 4);
 
 
