--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@ body {
         <a href="exercise7/index.html">Exercise 7</a>
 			 <a href="exercise8/index.html">Exercise 8</a>
 			 <a href="exercise9/index.html">Exercise 9</a>
+                <a href="exercise10/index.html">Exercise 10</a>
+                <a href="assignment%25202/index.html">Assignment 2</a>
     </div>
   </div> 
 </div>
