--- a/assignment 2/index.html
+++ b/assignment 2/index.html
@@ -9,9 +9,9 @@
 	
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
-    <script src="project1\datasets\confirmed_cases.geojson" type="text/javascript"></script>
-	<script src="project1\datasets\corona_states.geojson" type="text/javascript"></script>
-	<script src="project1\datasets\map.geojson" type="text/javascript"></script>
+    <script src="./geojsonFilesAssignmentTwo/confirmed_cases.geojson" type="text/javascript"></script>
+	<script src="./geojsonFilesAssignmentTwo/corona_cases.json" type="text/javascript"></script>
+	<script src="./geojsonFilesAssignmentTwo/map.geojson" type="text/javascript"></script>
 
 
 
@@ -67,7 +67,32 @@
 </head>
 
 <body>
+<div class="navbar">
+     <a href="../index.html">Home</a>
+     <div class="dropdown">
+         <button class="dropbtn">Dropdown
+             <i class="fa fa-caret-down"></i>
+         </button>
+         <div class="dropdown-content">
+             <a href="../exercise1/index.html">Exercise 1</a>
+             <a href="../exercise2/index.html">Exercise 2</a>
+             <a href="https://github.com/tressahobbs/LA458/blob/master/exercise3/dams.geojson">Exercise 3</a>
+             <a href="../exercise4/index.html">Exercise 4</a>
+             <a href="../assignment1/index.html">Assignment 1</a>
+             <a href="../exercise5/index.html">Exercise 5</a>
+             <a href="../exercise6/index.html">Exercise 6</a>
+             <a href="../exercise7/index.html">Exercise 7</a>
+			 <a href="../exercise8/index.html">Exercise 8</a>
+             <a href="../exercise9/index.html">Exercise 9</a>
+             <a href="../exercise10/index.html">Exercise 10</a>
 
+         </div>
+     </div>
+ </div>
+    
+<br>
+<br>
+<br>    
 
 <div id='map' class="leaflet-container" style="position: relative;"></div>
 
@@ -84,7 +109,6 @@
 		attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
 		maxZoom: 18,
 		id: 'mapbox/streets-v11',
-		// This is a unique access token, you must register for your own from https://account.mapbox.com/access-tokens/
 		tileSize: 512,
 		zoomOffset: -1,
 		accessToken: 'pk.eyJ1IjoidGhvYmJzMTM4MCIsImEiOiJjazdhb3YwdTgxNjlzM2V0ZnR6NHNkazcwIn0.WVYTFK32EocERM3viqwa6Q'
@@ -199,10 +223,6 @@ legend.onAdd = function(map){
 
 
 	
-
-	
-	
-
 
 
    
