--- a/assignment 2/index.html
+++ b/assignment 2/index.html
@@ -123,7 +123,7 @@
         }
         
         /* style for buttons */
-        .button {
+        .button-case.button {
             background-color: #4CAF50; /* Green */
             left:30%;
             border: none;
@@ -136,20 +136,22 @@
             cursor: pointer;
         }
         .iowa-btn {
-            position: relative;
-            left: 30%;
+            position: absolute;
+            left: 23%;
             padding: 32px 127px;}
         .case-btn{
-            position: relative;
-            left:30%;
+            position: absolute;
+            left:57.2%;
             padding:32px 127px}
         .zoom-btn{
-            position: relative;
-            left:30%;
-            padding:32px 127px}
+            position: absolute;
+            left:40%;
+            padding:32px 140px}
         .button-case{
-            position:relative;
-            right:3%;
+           position:relative;
+           right:50px;
+           padding-bottom:100px;
+
         }
         .info {
     padding: 6px 8px;
