--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@ body {
 			 <a href="exercise9/index.html">Exercise 9</a>
                 <a href="exercise10/index.html">Exercise 10</a>
                 <a href="assignment%25202/index.html">Assignment 2</a>
+        <a href="TechPeerReview/ArcGISOnlineindex.html">ArcGIS Online Peer Review</a>
+        <a href="TechPeerReview/StoryMapsindex.html">Story Maps Peer Review</a>
     </div>
   </div> 
 </div>
